v1.2/Extras/maintenance.md
---
title: "Maintenance Guide"
slug: "maintenance"
description: "Use these techniques to keep your FarmBot running smooth for years to come"
---

* toc
{:toc}

In this section we'll go over maintenance tips and techniques that can keep your FarmBot operating like the day you installed it.

# Keep FarmBot clean

FarmBot is a farmer that works and lives all day and night outside with the rain, sun, bugs, birds, and dirt. At the same time, FarmBot is a precision CNC machine with a lot of parts that allow it to move with millimeter accuracy to grow your food. Most would say these things can't co-exist. But they can with regular cleaning of your device.

{%
include callout.html
type="success"
title="FarmBot enjoys a good sponge bath"
content="Every three months, use a brush, sponge, broom, and a little water to clean off your FarmBot. Remove built up bird poop, mud, spider webs, and other debris. Clean out the hard to reach places, cut its nails, and treat it to a massage. Your FarmBot will appreciate your loving care and pay you back with years of vegetables."
%}

# Tighten loose screws

Every three months, inspect your hardware for loose screws. You can do this by grabbing a component such as an extrusion and attempting to wiggle it with a small amount of force. If you can feel or hear anything rattling, a screw somewhere needs to be tightened. Use the appropriate wrench to tighten any screws that you find to be loose.

{%
include callout.html
type="info"
title="Why are my screws loose?"
content="Under normal operating circumstance, your screws can become loose from vibrations, thermal expansion and contraction, rain, and even high winds. If a particular screw becomes loose multiple times in a short period of time, you can try putting a small amount of blue loctite onto the threads to prevent future loosening."
%}

# Keep eccentric spacers properly adjusted

The eccentric spacers are used for making fine adjustments to the spacing between the v-wheels on the gantry and cross-slide. This spacing is critical for FarmBot to move smoothly and wobble-free.

Over time, it is possible for your wheels to wear down slightly which can cause wobbling and a loss of precision in your device. It is also possible for your wheels to 'settle' and fall out of their optimal positioning, which can also cause wobbling.

{%
include callout.html
type="success"
title="Every three months"
content="Check your eccentric spacers for proper adjustment, and make adjustments as necessary using the [eccentric spacer adjustment reference guide](../FarmBot-Genesis-V1.2/reference/eccentric-spacer-adjustment.md)."
%}

# Keep belts tensioned
It is possible for the belts to stretch or slip over time which can lead to missed steps, premature wearing, a gantry that binds on the tracks, as well as a loss of precision in FarmBot's movements.

{%
include callout.html
type="success"
title="Every three months"
content="Check belts for proper tension. If you notice extra slack, loosen the **belt clip** that holds the belt in place, pull the clip to tension the belt, and then re-tighten the clip. Make sure to check all three belts: the two along the tracks and the one across the gantry main beam."
%}



{%
include callout.html
type="danger"
title="Do not over-tension"
content="The belts should not be under extreme tension. If they are, FarmBot's motors will have difficulty in moving and will miss steps. Use a small amount of tension - just enough so that there is no slack in the system."
%}



{%
include callout.html
type="warning"
title="Not done yet"
content="If you had to re-tension one or both of the belts along the tracks, the you must [re-equalize and synchronize the gantry](../FarmBot-Genesis-V1.2/gantry/feed-and-secure-the-belts.md#step-3-equalize-the-gantry) to prevent binding."
%}

# Inspect for damage

Once a month, inspect your hardware for visible damage such as corrosion, bending, or cracking of components. Under normal circumstances your hardware will be just fine because it is designed to withstand normal operating forces and built with corrosion and UV resistant materials.

However, certain conditions and accidents can cause damage such as:
* An unusually corrosive environment such as that near an ocean
* High temperature differences between the day and night can cause cracking
* Accidental impacts with the hardware that causes something to bend or break, such as tripping, falling branches, children.

If you notice any damaged parts, promptly replace the components. If the component is not replaced, you risk damaging other components out of negligence.

{%
include callout.html
type="success"
title="Let us know"
content="If you suspect damage has occurred as a fault of our design or manufacturing, let us know. We're here to work with you to make it right and improve future FarmBot hardware for everyone. Get in touch with us at [support@farmbot.io](mailto:support@farmbot.io)."
%}


# What's next?

 * [Track Maintenance](maintenance/track-maintenance.md)
 * [Gantry Maintenance](maintenance/gantry-maintenance.md)
 * [Cross-Slide Maintenance](maintenance/cross-slide-maintenance.md)
 * [Z-Axis Maintenance](maintenance/z-axis-maintenance.md)
 * [UTM Maintenance](maintenance/utm-maintenance.md)
 * [Tools Maintenance](maintenance/tools-maintenance.md)
